--- a/index.html
+++ b/index.html
@@ -2353,11 +2353,31 @@ if (motBtn) {
       const tests = vehicle.motTests || [];
       const latest = tests[0];
 
+      if (vehicle.registrationDate) {
+        // try YYYY-MM-DD, or support YYYY-MM
+        let val = '';
+        const s = String(vehicle.registrationDate).trim();
+        if (/^\d{4}-\d{2}$/.test(s)) val = s + '-01';
+        else if (/^\d{4}-\d{2}-\d{2}$/.test(s)) val = s;
+        else {
+          const d = new Date(s);
+          if (!isNaN(d)) val = d.toISOString().slice(0,10);
+        }
+        if (val) {
+          const firstRegInput = wrap.querySelector('#v_firstReg');
+          if (firstRegInput) firstRegInput.value = val;
+        }
+      }
+
+      if (vehicle.model) {
+        const modelInput = wrap.querySelector('#v_model');
+        if (modelInput) modelInput.value = vehicle.model;
+      }
+
       if (latest?.expiryDate) {
         const motInput = wrap.querySelector('#v_motExpiry');
         if (motInput) motInput.value = latest.expiryDate;
       }
-
 
       let msg = `Reg: ${vehicle.registration}\nMake/Model: ${vehicle.make || ''} ${vehicle.model || ''}\n\n`;
 
